--- a/spring-boot-crm/src/main/resources/templates/user/registerForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/registerForm.html
@@ -52,9 +52,10 @@
             <input type="password" class="form-control input-lg" placeholder="登录密码" th:field="*{password}"   maxlength="16"/>
           </div>
           <div class="form-group">
+            <div th:text="${msg}" style="font:red;text-align:center"></div>
             <button class="btn btn-primary btn-lg btn-block">注册</button>
             <span><a href="#">找回密码</a></span>
-            <span><a href="#" class="pull-right">登录</a></span>
+            <span><a href="/user/loginForm" class="pull-right" >登录</a></span>
           </div>
         </form>
       </div>
