--- a/spring-boot-crm/src/main/resources/templates/system/system.html
+++ b/spring-boot-crm/src/main/resources/templates/system/system.html
@@ -65,10 +65,10 @@
                   </ul>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-fw fa-bank"></i> Page four</a>
+                    <a href="/system/power/syspower/showAllActions" target="sysFrame"><i class="fa fa-fw fa-bank"></i> 权限管理</a>
                 </li>
                 <li>
-                    <a href="/power/power"><i class="fa fa-fw fa-dropbox"></i>用户权限</a>
+                    <a href="/system/power/userPower" target="sysFrame"><i class="fa fa-fw fa-dropbox"></i>用户权限</a>
                 </li>
                 <li>
                     <a href="/group/addgroupForm" target="sysFrame"><i class="fa fa-fw fa-twitter"></i> 添加用户组</a>
@@ -87,7 +87,7 @@
            
                 
                 
-                <iframe src="/system/init" width="100%" height="900" frameborder="0" scrolling="auto" name="sysFrame"></iframe>
+                <iframe src="" width="100%" height="900" frameborder="0" scrolling="auto" name="sysFrame"></iframe>
          </div>
 
         <!-- /#page-content-wrapper -->
