--- a/spring-boot-crm/src/main/resources/templates/user/updateForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/updateForm.html
@@ -11,6 +11,7 @@
         <input type="hidden" name="id" id="id" th:value="*{id}"/>
         <th>登陆名</th>
         <td><input type="text" th:value="*{loginname}" th:field="*{loginname}"/></td>
+        <td><input type="text" th:value="*{username}" th:field="*{username}"/></td>
         <td><input type="submit" value="提交"/></td>
       </tr>
     </table>
