--- a/spring-boot-crm/src/main/resources/templates/system/system.html
+++ b/spring-boot-crm/src/main/resources/templates/system/system.html
@@ -54,10 +54,10 @@
                     <a href="#"><i class="fa fa-fw fa-cog"></i> Third page</a>
                 </li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-fw fa-plus"></i> Dropdown <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-fw fa-plus"></i> 流程管理 <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li class="dropdown-header">Dropdown heading</li>
-                    <li><a href="#">Action</a></li>
+                    <li class="dropdown-header">流程管理</li>
+                    <li><a href="/system/activiti/groupList" target="sysFrame">用户组管理</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
                     <li><a href="#">Separated link</a></li>
@@ -68,10 +68,10 @@
                     <a href="/system/power/syspower/showAllActions" target="sysFrame"><i class="fa fa-fw fa-bank"></i> 权限管理</a>
                 </li>
                 <li>
-                    <a href="/system/power/userPower" target="sysFrame"><i class="fa fa-fw fa-dropbox"></i>用户权限</a>
+                    <a href="/system/power/userList" target="sysFrame"><i class="fa fa-fw fa-dropbox"></i>用户权限</a>
                 </li>
                 <li>
-                    <a href="/group/addgroupForm" target="sysFrame"><i class="fa fa-fw fa-twitter"></i> 添加用户组</a>
+                    <a href="/system/power/syspower/addGroupForm" target="sysFrame"><i class="fa fa-fw fa-twitter"></i> 添加用户组</a>
                 </li>
             </ul>
         </nav>
