--- a/spring-boot-crm/src/main/resources/templates/user/registerForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/registerForm.html
@@ -40,13 +40,16 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close">X</button>
+        <button type="button" class="close" onclick="javascript:history.go(-1);">X</button>
         <h1 class="text-center text-primary">注册</h1>
       </div>
       <div class="modal-body">
-        <form action="#" class="form col-md-12 center-block" method="post" th:action="@{./save}" th:object="${user}">
+        <form action="#" class="form col-md-12 center-block" method="post" th:action="@{/user/save}" th:object="${user}">
           <div class="form-group">
             <input type="text" class="form-control input-lg" placeholder="手机号" th:field="*{phone}"    maxlength="16"/>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control input-lg" placeholder="真实姓名" th:field="*{username}"    maxlength="16"/>
           </div>
           <div class="form-group">
             <input type="password" class="form-control input-lg" placeholder="登录密码" th:field="*{password}"   maxlength="16"/>
