--- a/spring-boot-crm/src/main/resources/templates/system/system.html
+++ b/spring-boot-crm/src/main/resources/templates/system/system.html
@@ -58,8 +58,8 @@
                   <ul class="dropdown-menu" role="menu">
                     <li class="dropdown-header">流程管理</li>
                     <li><a href="/system/activiti/groupList" target="sysFrame">用户组管理</a></li>
-                    <li><a href="/system/activiti/processDefList">所有流程</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li><a href="/system/activiti/processDefList" target="sysFrame">所有流程</a></li>
+                    <li><a href="/system/activiti/processInstanceList" target="sysFrame">已经启动的流程</a></li>
                     <li><a href="#">Separated link</a></li>
                     <li><a href="#">One more separated link</a></li>
                   </ul>
