--- a/spring-boot-crm/src/main/resources/templates/user/user.html
+++ b/spring-boot-crm/src/main/resources/templates/user/user.html
@@ -37,16 +37,16 @@
      <div class="row">
         <div class="col-sm-2 col-md-2">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">个人中心 <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#">个人中心 <span class="sr-only" ></span></a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="/user/res/resList" target="userFrame">责任清单</a></li>
-            <li><a href="/user/res/month" target="userFrame">月考核表</a></li>
-            <li><a href="/user/res/halfYear" target="userFrame">半年考核</a></li>
-            <li><a href="/user/res/fullYear" target="userFrame">年度考核</a></li>
+            <li><a href="/responsiblity/responsiblityList" target="userFrame">责任清单</a></li>
+            <li><a href="/responsiblity/assessmentList/month" target="userFrame">考核表</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="">个人信息</a></li>
+            <li><a href="/system/activiti/applyList" target="userFrame">申请列表</a></li>
+            <li><a href="/system/activiti/taskList/candidate" target="userFrame">待办任务</a></li>
           </ul>
         </div>
         
