--- a/spring-boot-crm/src/main/resources/templates/user/ini.html
+++ b/spring-boot-crm/src/main/resources/templates/user/ini.html
@@ -40,7 +40,7 @@
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
               <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail"/>
-              <h4>头像</h4>
+              <h4 th:text="${session.sysuser.username}"></h4>
               <span class="text-muted">头像</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
