--- a/spring-boot-crm/src/main/resources/templates/user/loginForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/loginForm.html
@@ -43,7 +43,7 @@
       <div class="modal-body">
          <form action="#" method="post" th:action="@{/user/login}" th:object="${user}">
           <div class="form-group">
-            <input type="text" class="form-control input-lg" placeholder="手机号" th:field="*{phone}"    maxlength="16"/>
+            <input type="text" class="form-control input-lg" placeholder="手机号\真名" th:field="*{phone}"    maxlength="16"/>
           </div>
           <div class="form-group">
             <input type="password" class="form-control input-lg" placeholder="登录密码" th:field="*{password}"   maxlength="16"/>
