--- a/spring-boot-crm/src/main/resources/templates/user/user.html
+++ b/spring-boot-crm/src/main/resources/templates/user/user.html
@@ -40,8 +40,9 @@
             <li class="active"><a href="#">个人中心 <span class="sr-only" ></span></a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="/responsiblity/responsiblityList" target="userFrame">责任清单</a></li>
-            <li><a href="/responsiblity/assessmentList/month" target="userFrame">考核表</a></li>
+            <li><a href="/responsibility/responsibilityList" target="userFrame">责任清单</a></li>
+            <li><a href="/responsibility/assessmentList/month" target="userFrame">考核表</a></li>
+            <li><a href="/responsibility/projectList/completed" target="userFrame">所有项目</a></li>
           </ul>
           <ul class="nav nav-sidebar">
             <li><a href="">个人信息</a></li>
