--- a/spring-boot-crm/src/main/resources/templates/user/loginForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/loginForm.html
@@ -37,7 +37,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" onclick="javascript:document.getElementById('loginDiv').display='none'">X</button>
+        <button type="button" class="close" onclick="javascript:history.back(-1)">X</button>
         <h1 class="text-center text-primary">登录</h1>
       </div>
       <div class="modal-body">
