--- a/spring-boot-crm/src/main/resources/templates/index.html
+++ b/spring-boot-crm/src/main/resources/templates/index.html
@@ -19,7 +19,10 @@
   <link rel="stylesheet" href="/css/font-awesome.min.css"/>
   <!-- Ionicons -->
   <link rel="stylesheet" href="/css/ionicons.min.css"/>
-  <!-- Theme style -->
+
+  <!-- fileinput -->
+  <link rel="stylesheet" href="/css/plugins/fileinput.min.css"/>
+    <!-- Theme style -->
   <link rel="stylesheet" href="/css/AdminLTE.min.css"/>
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
@@ -293,14 +296,17 @@
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
-                <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                <div class="pull-left" th:if="${session.sysuser!=null}">
+                  <a th:href="@{'/user/updateForm/'+${session.sysuser.id}}"  class="btn btn-default btn-flat">修改资料</a>
                 </div>
                 <div class="pull-right" th:if="${session.sysuser!=null}">
-                  <a href="/user/logout" class="btn btn-default btn-flat" target="mainFrame">退出系统</a>
+                  <a href="/user/logout" class="btn btn-default btn-flat" >退出系统</a>
+                </div>
+                <div class="pull-left" th:if="${session.sysuser==null}">
+                  <a href="/user/registerForm" target="mainFrame" class="btn btn-default btn-flat">注册</a>
                 </div>
                 <div class="pull-right" th:if="${session.sysuser==null}">
-                    <a href="/user/loginForm" class="btn btn-default btn-flat" target="mainFrame">登录系统</a>
+                    <a href="/user/loginForm" class="btn btn-default btn-flat">登录系统</a>
                   </div>
                 
               </li>
@@ -363,6 +369,9 @@
               <li>
                     <a href="/system/power/syspower/addGroupForm" target="mainFrame"><i class="fa fa-fw fa-twitter"></i> 添加用户组</a>
               </li>
+              <li>
+                    <a href="/file/uploadUsers" target="mainFrame"><i class="fa fa-fw fa-twitter"></i>导入用户</a>
+              </li>
           </ul>
         </li>
        <li class="treeview">
@@ -374,11 +383,12 @@
             </span>
           </a>
           <ul class="treeview-menu">
+            <li th:if="${session.sysuser!=null}"><a th:href="@{'/user/updateForm/'+${session.sysuser.id}}" target="mainFrame">个人信息修改</a></li>
             <li><a href="/responsibility/responsibilityList" target="mainFrame">责任清单</a></li>
-            <li><a href="/responsibility/assessmentList/month" target="mainFrame">考核表</a></li>
-            <li><a href="/responsibility/projectList/completed" target="mainFrame">所有项目</a></li>
-            <li><a href="/system/activiti/processInstanceList" target="mainFrame">申请列表</a></li>
-            <li><a href="/system/activiti/taskList/candidate" target="mainFrame">待办任务</a></li>
+            <li><a href="/responsibility/assessmentList/month" target="mainFrame">日常工作一线干部考核</a></li>
+            <li><a href="/responsibility/projectList/completed" target="mainFrame">日常工作项目管理</a></li>
+            <li><a href="/system/activiti/processInstanceList/now" target="mainFrame">日常工作流程申请列表</a></li>
+            <li><a href="/system/activiti/taskList/candidate" target="mainFrame">需要审批和待办的任务</a></li>
           </ul>
         </li>
       </ul>
@@ -395,8 +405,8 @@
         <small>example</small>
       </h1>
       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#">UI</a></li>
+        <li><a href="/index"><i class="fa fa-dashboard"></i>首页</a></li>
+        <li><a href="javascript:history.back(-1)">上一页</a></li>
         <li class="active">Timeline</li>
       </ol>
     </section>
@@ -624,6 +634,8 @@
 <script src="/js/plugins/fastclick.js"></script>
 <!-- AdminLTE App -->
 <script src="/js/adminlte.min.js"></script>
-
+<!-- fileinput -->
+<script src="/js/plugins/fileinput.min.js"></script>
+<script src="/js/plugins/sortable.min.js"></script>
 </body>
 </html>
