--- a/spring-boot-crm/src/main/resources/templates/user/loginForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/loginForm.html
@@ -1,71 +1,71 @@
+
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <link rel="icon" href="../static/images/favicon.ico"/>
+<html lang="zh-cmn-Hans">
+<head>
+	<meta charset="utf-8"/>
+	<meta http-equiv="Cache-Control" content="no-siteapp" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+	<meta name="renderer" content="webkit"/>
+	<meta name="msapplication-tap-highlight" content="no"/>
+	<meta name="Keywords" content=""/>
+	<meta name="Description" content=""/>
+	<META name="catalogs" content="13775"/>
+	<META name="filetype" content="1"/>
+	<META name="publishedtype" content="1"/>
+	<META name="pagetype" content="2"/>
+	<META name="subject" content="13775;1"/>
+	<title>一线考察干部系统_福州新闻网</title>
 
-    <title>一线考核系统</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="/css/ie10-viewport-bug-workaround.css" rel="stylesheet"/>
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="/css/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for this template -->
-    <link href="/css/carousel.css" rel="stylesheet"/>
-</head>
+	<script type="text/javascript" src="//img.fznews.com.cn/www/javascript/jquery.js"></script>
+	<!--[If Lt IE 9]><script src="//img.fznews.com.cn/www/js/html5shiv/dist/html5shiv.js"></script><![endif]-->
+	<style type="text/css">
+		body,ul,li,p,span,h1,h2,img,div,footer,header,section,aside,dl,dt,dd,a,form,input,textarea,i { margin:0; padding:0; border:0;}
+		body{ color:#333; font-family:"Microsoft YaHei", "微软雅黑","SimSun","宋体","Arial Narrow";}
+		ul,ol,li{ list-style-type:none; }
+		select,input,img{vertical-align:middle;}
+		a{text-decoration:none;color:#333;}
+		a:hover,a:active,a:focus{text-decoration:underline;}
+		.clearit, .clear {clear:both;}
+		.hd-tit { height: auto; margin-bottom:20px; overflow:hidden; position:relative; }
+		.hd-tit span { float:left; display:inline-block; color:#1694FF;  font-weight: 500; font-size:40px;}
+		.hd-tit .more {position:absolute; right:0; bottom:15px; width:20px; }
+		.hd-tit .more img{ float:right;}
+		#content1,#content2 { overflow:hidden; margin:0 auto; }
+		body > div {  }
+		#content1> div {  }
+		footer { width:1065px; margin:0 auto; }
+	#content1 { display:block; width:100%; height: 100%; position:relative; }
+	.left{ float:left; width:75%; height:100%; position:relative;}
+	.left img{ width:100%; height:100%;}
+	.left span{ position:absolute; top:140px; left:110px; font-size:52px; line-height:70px; max-height:140px; text-align:center; color:#FFFFFF; letter-spacing:2px; -webkit-user-select:none;user-select:none;}
+	.right{ float:right; width:25%; height:100%; background:#ffffff;}
+	.dl{ margin:40% 0 0 40px; }
+	.dl input{ width:91%; height:60px; margin:30px 0 0 0; text-indent:3em; font-size:18px; color:#AAAAAA; outline: 0; border:1px #AAAAAA solid; -moz-border-radius:10px; -webkit-border-radius:10px; border-radius:10px;}
+	.dl .tel{ background: url(/images/yh.jpg) top left no-repeat; background-position:10px 15px;}
+	.dl .pwd{ background: url(/images/mi.jpg) top left no-repeat; background-position:10px 15px;}
+	.dl .tj{ background:#1694FF; font-size:30px; color:#FFFFFF;letter-spacing:5px; text-indent:0; cursor: pointer; }
+	.dl p { display:block; margin:30px 0 0 0 ; color:#1694FF;}
+	.dl p a{ color:#1694FF;}
+	.dl .jzw input{ width:20px; height:20px; margin:0 10px 0 0; cursor: pointer;}
+	</style>
+	<link rel="stylesheet" href="//img.fznews.com.cn/www/javascript/animate.min.css"/>
+	<!--[If Lt IE 9]><script src="//img.fznews.com.cn/www/js/html5shiv/dist/html5shiv.js"></script><![endif]-->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/></head>
 <body>
-
-  
-  <div id="loginDiv" class="modal show" style="top:10%">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" onclick="javascript:history.back(-1)">X</button>
-        <h1 class="text-center text-primary">登录</h1>
-      </div>
-      <div class="modal-body">
-         <form action="#" method="post" th:action="@{/user/login}" th:object="${user}">
-          <div class="form-group">
-            <input type="text" class="form-control input-lg" placeholder="手机号\真名" th:field="*{phone}"    maxlength="16"/>
-          </div>
-          <div class="form-group">
-            <input type="password" class="form-control input-lg" placeholder="登录密码" th:field="*{password}"   maxlength="16"/>
-          </div>
-          <div class="form-group">
-            <div th:text="${msg}" style="font:red;text-align:center"></div>
-            <button class="btn btn-primary btn-lg btn-block" >登录</button>
-            <span><a href="#">找回密码</a></span>
-            <span><a  class="pull-right" href="/user/registerForm">注册</a></span>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        
-      </div>
-    </div>
-  </div>
-</div>
-    <!-- Bootstrap core JavaScript ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/js/jquery-3.2.1.js"></script>
-
-    <script src="/js/bootstrap.min.js"></script>
+	<div id="content1">
+		<div class="left"><img src="/images/bj1-1.jpg"/><span>福州日报社<br/>一线干部考察系统</span></div>
+		<div class="right">
+		<form class="dl" action="#" method="post" th:action="@{/user/login}" th:object="${user}">
+		<div class="hd-tit"><span>登录</span></div>
+		<input type="text" name="tel" value="" class="tel" placeholder="手机号码" th:field="*{phone}"/><br/>
+		<input type="password" name="password" value="" class="pwd" placeholder="登录密码" th:field="*{password}" />
+		<input type="submit" value="登录" class="tj"/>
+		<p><span class="jzw"><input type="checkbox" name="votes[]"/></span><span>记住我</span><span style=" float:right; margin:0 8% 0 0; cursor: pointer;">忘记密码？</span>
+		<span style=" float:right; margin:0 8% 0 0; cursor: pointer;"><a href="/user/registerForm">注册</a></span></p>
+		
+		</form>
+	
+		</div>
+	</div>
 </body>
 </html>
