--- a/spring-boot-crm/src/main/resources/templates/user/registerForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/registerForm.html
@@ -11,9 +11,10 @@
 
     <title>一线考核系统</title>
 
-    <!-- Bootstrap core CSS -->
+<!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
-
+    <link href="/css/bootstrap-select.min.css" rel="stylesheet"/>
+    <link href="/css/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="/css/ie10-viewport-bug-workaround.css" rel="stylesheet"/>
 
@@ -26,8 +27,19 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+       <!-- Bootstrap core JavaScript ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/js/jquery-3.2.1.js"></script>
 
-    <!-- Custom styles for this template -->
+    <script src="/js/bootstrap.min.js"></script>
+
+    <script src="/js/holder.min.js"></script>
+
+    <script src="/js/bootstrap-select.min.js"></script>
+    
+    <script src="/js/moment-with-locales.min.js"></script>
+    
+    <script src="/js/bootstrap-datetimepicker.min.js"></script>
     <link href="/css/carousel.css" rel="stylesheet"/>
    
   </head>
@@ -49,11 +61,25 @@
             <input type="text" class="form-control input-lg" placeholder="手机号" th:field="*{phone}"    maxlength="16"/>
           </div>
           <div class="form-group">
+            <input type="text" class="form-control input-lg" placeholder="邮箱" th:field="*{email}"/>
+          </div>
+         <div class="form-group">
             <input type="text" class="form-control input-lg" placeholder="真实姓名" th:field="*{username}"    maxlength="16"/>
           </div>
           <div class="form-group">
             <input type="password" class="form-control input-lg" placeholder="登录密码" th:field="*{password}"   maxlength="16"/>
           </div>
+
+	    <div class="form-group">
+	      <select  class="selectpicker" data-live-search="true" title="选择部门（分管领导可多选）..." th:field="*{deptIds}" multiple="multiple" >
+	        <option th:each="d:${depts}"  th:value="${d.did}" th:text="${d.name}"></option>
+	      </select>
+	      <select  class="selectpicker" data-live-search="true" title="请正确选择职级..."  th:field="*{postIds}" multiple="multiple">
+	        <option th:each="p:${posts}" th:value="${p.pId}" th:text="${p.name}"></option>
+	     
+	      </select>
+	    </div>
+
           <div class="form-group">
             <div th:text="${msg}" style="font:red;text-align:center"></div>
             <button class="btn btn-primary btn-lg btn-block">注册</button>
@@ -68,11 +94,7 @@
     </div>
   </div>
 </div>
-    <!-- Bootstrap core JavaScript ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/js/jquery-3.2.1.js"></script>
 
-    <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
 
